--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -6,11 +6,11 @@
     <string name="about_dust">Prach</string>
     <string name="about_fog">Hmla</string>
     <string name="about_for_translators">Pre prekladateľov:</string>
-    <string name="about_for_translators_text">Ak chcete pomôcť s prekladom tejto aplikácie do Vášho jazyka, nájdete naše github repo po stlačení ikony Githubu.</string>              
+    <string name="about_for_translators_text">Ak chcete pomôcť s prekladom tejto aplikácie do Vášho jazyka, nájdete naše github repo po stlačení ikony Githubu.</string>
     <string name="about_hailstone">Krúpy</string>
     <string name="about_haze">Hmla</string>
     <string name="about_heavy_rain">Prietrž</string>
-    <string name="about_heavy_snow">Ťažký sneh</string> 
+    <string name="about_heavy_snow">Ťažký sneh</string>
     <string name="about_light_rain">Mrholenie</string>
     <string name="about_light_snow">Jemný sneh</string>
     <string name="about_moderate_rain">Mierny dážď</string>
@@ -44,19 +44,19 @@
     <string name="dialog_color_picker">Výber farby</string>
     <string name="donate">Príspevok</string>
     <string name="donations_button_close">Zatvoriť</string>
-    <string name="donations_description">"Je pre Vás táto aplikácia užitočná? Podporte nás malým príspevkom!"</string>
+    <string name="donations_description">Je pre Vás táto aplikácia užitočná?\nPodporte nás malým príspevkom!</string>
     <string name="donations_flattr">Flattr</string>
     <string name="donations_flattr_description">Flattr vezme 10 % ako mesačný poplatok!</string>
     <string name="donations_google_android_market">Obchod Google Play</string>
     <string name="donations_google_android_market_description">Google si vezme 30 % z každého príspevku!</string>
     <string name="donations_google_android_market_donate_button">Prispieť!</string>
-    <string name="donations_google_android_market_not_supported">In-App príspevky nie sú podporované. Je Google Play nainštalovaný správne?</string> 
+    <string name="donations_google_android_market_not_supported">In-App príspevky nie sú podporované. Je Google Play nainštalovaný správne?</string>
     <string name="donations_google_android_market_not_supported_title">In-App príspevky nie sú podporované</string>
-    <string name="donations_google_android_market_text">Koľko?</string> 
+    <string name="donations_google_android_market_text">Koľko?</string>
     <string name="donations_paypal">PayPal</string>
     <string name="donations_paypal_description">Môžete si zvoliť výšku príspevku!</string>
     <string name="donations_paypal_item_name">InApp Príspevok</string>
-    <string name="donations_thanks_dialog">"Ďakujeme za príspevok! Sme Vám naozaj vďační!"</string>
+    <string name="donations_thanks_dialog">Ďakujeme za príspevok! Sme Vám naozaj vďační!</string>
     <string name="donations_thanks_dialog_title">Ďakujeme!</string>
     <string name="donations_yandex">Yandex.Money</string>
     <string name="end_time_title">Koniec</string>
@@ -76,12 +76,12 @@
     <string name="forecast_flurries">Ľahké prehánky</string>
     <string name="forecast_fog">Hmla</string>
     <string name="forecast_freezing_drizzle">Mrznúce mrholenie</string>
-	<string name="forecast_freezing_rain">Mrznúci dážď</string>
+    <string name="forecast_freezing_rain">Mrznúci dážď</string>
     <string name="forecast_hail">Krupobitie</string>
     <string name="forecast_haze">Opar</string>
     <string name="forecast_heavy_rain">Výdatný dážď</string>
     <string name="forecast_hot">Horúco</string>
-	<string name="forecast_icy">Námraza</string>
+    <string name="forecast_icy">Námraza</string>
     <string name="forecast_light_rain">Slabý dážď</string>
     <string name="forecast_light_snow">Slabé sneženie</string>
     <string name="forecast_mist">Hmlový opar</string>
@@ -93,7 +93,7 @@
     <string name="forecast_rain">Dážď</string>
     <string name="forecast_rain_and_snow">Dážď so snehom</string>
     <string name="forecast_rain_showers">Dažďové prehánky</string>
-	<string name="forecast_sand">Piesočná búrka</string>
+    <string name="forecast_sand">Piesočná búrka</string>
     <string name="forecast_scattered_showers">Ojedinelé prehánky</string>
     <string name="forecast_scattered_thunderstorms">Ojedinelé búrky</string>
     <string name="forecast_showers">Prehánky</string>
@@ -101,7 +101,7 @@
     <string name="forecast_smoke">Dymno</string>
     <string name="forecast_snow">Sneženie</string>
     <string name="forecast_snow_showers">Snehové prehánky</string>
-	<string name="forecast_snow_storm">Snehová búrka</string>
+    <string name="forecast_snow_storm">Snehová búrka</string>
     <string name="forecast_sunny">Slnečno</string>
     <string name="forecast_thunderstorm">Búrka</string>
     <string name="forecast_thunderstorms">Búrky</string>
@@ -132,16 +132,16 @@
     <string name="moon_lastquarter">Posledná Štvrť</string>
     <string name="moon_newmoon">Nov</string>
     <string name="moon_since">Od</string>
-    <string name="moon_waningcrescent">Ubúdajúci polmesiac</string> 
+    <string name="moon_waningcrescent">Ubúdajúci polmesiac</string>
     <string name="moon_waninggibbous">Ubúdajúci mesiac</string>
-    <string name="moon_waxingcrescent">Pribúdajúci polmesiac</string> 
-    <string name="moon_waxinggibbous">Pribúdajúci mesiac</string> 
+    <string name="moon_waxingcrescent">Pribúdajúci polmesiac</string>
+    <string name="moon_waxinggibbous">Pribúdajúci mesiac</string>
     <string name="network_error">Nie je možné sa pripojiť na server</string>
     <string name="network_in_quiet_hours">Počas času ticha sú aktualizácie pozastavené.</string>
     <string name="network_in_roaming">Počas roamingu sú aktualizácie pozastavené.</string>
     <string name="network_wifi_only">Aktualizovať len na Wi-Fi.</string>
     <string name="new_version">Nová verzia</string>
-    <string name="no_provider">"Poloha je nedostupná. Zvoľte mesto manuálne"</string>
+    <string name="no_provider">Poloha je nedostupná. Zvoľte mesto manuálne</string>
     <string name="no_weather_provider">Žiaden zdroj predpovede</string>
     <string name="not_now">Neskôr</string>
     <string name="ok">OK</string>
@@ -233,7 +233,7 @@
     <string name="settings_widgets_widget4x2_wind_font_title">Vietor</string>
     <string name="settings_widgets_widget4x3">Widget 4x3</string>
     <string name="settings_widgets_widget4x3_hourly_view">Hodinová predpoveď</string>
-   	<string name="share">Zdieľať</string>
+    <string name="share">Zdieľať</string>
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# Dnes %1$s je počasie %2$s, %3$s, %4$s. Stav z %5$s."</string>
     <string name="share_weather_title">Zdieľať informácie o počasí</string>
@@ -259,7 +259,7 @@
     <string name="visibility_units_mi">" míle"</string>
     <string name="weather_feel">"Pocitovo: "</string>
     <string name="weather_forecast_empty">--</string>
-	<string name="weather_humidity">"Vlhkosť: "</string>
+    <string name="weather_humidity">"Vlhkosť: "</string>
     <string name="weather_no_city">Žiadne Mesto</string>
     <string name="weather_no_data">Žiadne údaje o počasí</string>
     <string name="weather_no_temp_data">-°</string>
@@ -274,7 +274,7 @@
     <string name="widget_name_4x2">Počasie BZ 4x2</string>
     <string name="widget_name_4x2_v5">Počasie BZ 4x2</string>
     <string name="widget_name_4x3">(4x3)Weather BZ</string>
-    <string name="widget_text_color_summary">"Farba textu widgetu"</string>
+    <string name="widget_text_color_summary">Farba textu widgetu</string>
     <string name="wind_e">V</string>
     <string name="wind_ene">V-SV</string>
     <string name="wind_ese">V-JV</string>
