--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -19,8 +19,8 @@
     <string name="about_moderate_snow">Hafif Kar Yağışı</string>
     <string name="about_rainstorm">Yağmur Fırtınası</string>
     <string name="about_rain_drizzle">Yağmur Çiseleme</string>
-    <string name="about_sleet">Karla karışık yağmur</string>
-    <string name="about_social">Sosyal linkler:</string>
+    <string name="about_sleet">Karla karışık Yağmur</string>
+    <string name="about_social">Sosyal Linkler:</string>
     <string name="about_sunny">Açık</string>
     <string name="about_t_storms">Fırtına</string>
     <string name="about_version">Sürüm:</string>
@@ -134,7 +134,7 @@
     <string name="moon_lastquarter">Son dördün</string>
     <string name="moon_waningcrescent">Hilal</string>
     <string name="moon_current_view">Gösterme modu: %s</string>
-    <string name="moon_illuminated">Işıklılık</string>
+    <string name="moon_illuminated">Aydınlılık</string>
     <string name="moon_since">Beri</string>
     <string name="network_error">Sunucuya bağlanılamadı.\nAğ ayarlarını kontrol edin.</string>
     <string name="new_version">Yeni Sürüm</string>
@@ -228,8 +228,8 @@
     <string name="save_screen_shot_failed">Ekran görüntüsü kaydedilemedi</string>
     <string name="start_time_title">Başlat</string>
     <string name="temperature_units">Sıcaklık birimleri</string>
-    <string name="temperature_units_c">Celsius</string>
-    <string name="temperature_units_f">Fahrenheit</string>
+    <string name="temperature_units_c">Derece</string>
+    <string name="temperature_units_f">Fahrenayt</string>
     <string name="text_color_title">Yazı rengi</string>
     <string name="theme_author">"Yazar: "</string>
     <string name="theme_date">"Tarih: "</string>
@@ -278,16 +278,16 @@
     <string name="wind_w">B</string>
     <string name="wind_wnw">B-KB</string>
     <string name="wind_wsw">B-GB</string>
-    <string name="zodiac_aries">Aries</string>
-    <string name="zodiac_taurus">Taurus</string>
-    <string name="zodiac_gemini">Gemini</string>
-    <string name="zodiac_cancer">Cancer</string>
-    <string name="zodiac_leo">Leo</string>
-    <string name="zodiac_virgo">Virgo</string>
-    <string name="zodiac_libra">Libra</string>
-    <string name="zodiac_scorpio">Scorpio</string>
-    <string name="zodiac_sagittarius">Sagittarius</string>
-    <string name="zodiac_capricorn">Capricorn</string>
-    <string name="zodiac_aquarius">Aquarius</string>
-    <string name="zodiac_pisces">Pisces</string>
+    <string name="zodiac_aries">Koç</string>
+    <string name="zodiac_taurus">Boğa</string>
+    <string name="zodiac_gemini">İkizler</string>
+    <string name="zodiac_cancer">Yengeç</string>
+    <string name="zodiac_leo">Aslan</string>
+    <string name="zodiac_virgo">Başak</string>
+    <string name="zodiac_libra">Terazi</string>
+    <string name="zodiac_scorpio">Akrep</string>
+    <string name="zodiac_sagittarius">Yay</string>
+    <string name="zodiac_capricorn">Oğlak</string>
+    <string name="zodiac_aquarius">Kova</string>
+    <string name="zodiac_pisces">Balık</string>
 </resources>
