--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -278,16 +278,16 @@
     <string name="wind_w">B</string>
     <string name="wind_wnw">B-KB</string>
     <string name="wind_wsw">B-GB</string>
-    <string name="zodiac_aries">Aries</string>
-    <string name="zodiac_taurus">Taurus</string>
-    <string name="zodiac_gemini">Gemini</string>
-    <string name="zodiac_cancer">Cancer</string>
-    <string name="zodiac_leo">Leo</string>
-    <string name="zodiac_virgo">Virgo</string>
-    <string name="zodiac_libra">Libra</string>
-    <string name="zodiac_scorpio">Scorpio</string>
-    <string name="zodiac_sagittarius">Sagittarius</string>
-    <string name="zodiac_capricorn">Capricorn</string>
-    <string name="zodiac_aquarius">Aquarius</string>
-    <string name="zodiac_pisces">Pisces</string>
+    <string name="zodiac_aries">Koç</string>
+    <string name="zodiac_taurus">Boğa</string>
+    <string name="zodiac_gemini">İkizler</string>
+    <string name="zodiac_cancer">Yengeç</string>
+    <string name="zodiac_leo">Aslan</string>
+    <string name="zodiac_virgo">Başak</string>
+    <string name="zodiac_libra">terazi</string>
+    <string name="zodiac_scorpio">Akrep</string>
+    <string name="zodiac_sagittarius">Yay</string>
+    <string name="zodiac_capricorn">Oğlak</string>
+    <string name="zodiac_aquarius">Kova</string>
+    <string name="zodiac_pisces">Balık/string>
 </resources>
